--- a/templates/trainingPage.html
+++ b/templates/trainingPage.html
@@ -68,7 +68,10 @@
             
         </div>
 
-        
+        <div class="plot-container">
+            <h2>Confusion Matrix :</h2>
+            <img id="train-confusion-matrix" alt="Train confusion matrix">
+        </div>
         <div class="plot-container">
             <h2>PSD Plot :</h2>
             <img id="psd-plot" alt="PSD Plot">
@@ -77,6 +80,7 @@
             <h2>Raw Data Plot :</h2>
             <img id="raw-data-plot" alt="Raw Data Plot">
         </div>
+        
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./../static/scripts.js"></script>
