feat(update): Updating web code

--- a/templates/testPage.html
+++ b/templates/testPage.html
@@ -61,7 +61,10 @@
             
         </div>
 
-        
+        <div class="plot-container">
+            <h2>Confusion Matrix :</h2>
+            <img id="train-confusion-matrix" alt="Train confusion matrix">
+        </div>
         <div class="plot-container">
             <h2>PSD Plot :</h2>
             <img id="psd-plot" alt="PSD Plot">
