--- a/static/styles.css
+++ b/static/styles.css
@@ -170,7 +170,9 @@ a:hover {
     overflow-x: auto;  /* Horizontal scroll */
     min-height: 0.01%;
 }
-
+.results-container {
+    display: none;
+}
 table {
     width: 100%;
     border-collapse: collapse;
